# Globalizer

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Globalizer_conf.xml  README.md
.github/workflows/: GlobalizerTest.yml
cmake/: GMPConfig.cmake  globalizer_doxygen.cmake  globalizer_lib.cmake  globalizer_mpi.cmake  globalizer_utils.cmake
examples/: HDOptimizationMain.cpp  Main.cpp  SampleMain.cpp  SeparableOptimization.cpp  SimpleMain.cpp
globalizer/evolvent/include/: Evolvent.h
globalizer/evolvent/src/: Evolvent.cpp
globalizer/extended/include/: Extended.h
globalizer/extended/src/: Extended.cpp
globalizer/include/: Common.h  Defines.h  GlobProcess.h  Globalizer.h  HDSolver.h  SeparableOptimizationSolver.h  SolutionResult.h  Solver.h  SolverInterface.h
globalizer/method/calculation/include/: Calculation.h  CalculationFactory.h  CudaCalculation.h  InformationForCalculation.h  MPICalculation.h  MPICalculationAsync.h  OMPCalculation.h  OmpCalculation.h
globalizer/method/calculation/src/: Calculation.cpp  CalculationFactory.cpp  CudaCalculation.cpp  MPICalculation.cpp  MPICalculationAsync.cpp  MpiCalculation.cpp  MpiCalculationAsync.cpp  OMPCalculation.cpp  OmpCalculation.cpp
globalizer/method/include/: BaseInterval.h  DualQueue.h  HDTask.h  Method.h  MethodFactory.h  MethodInterface.h  MinMaxHeap.h  MixedIntegerMethod.h  ParallelHookeJeevesMethod.h  Performance.h  Queue.h  QueueCommon.h  SearcDataIterator.h  SearchData.h  SearchInterval.h  SearchIntervalFactory.h  SearchIteration.h  SeparableOptimizationTask.h  Task.h  TaskFactory.h  TreeNode.h  Trial.h  TrialFactory.h
globalizer/method/local_method/include/: LocalMethod.h
globalizer/method/local_method/src/: LocalMethod.cpp
globalizer/method/src/: Data.cpp  DualQueue.cpp  HDTask.cpp  Method.cpp  MethodFactory.cpp  MixedIntegerMethod.cpp  ParallelHookeJeevesMethod.cpp  Queue.cpp  SearcDataIterator.cpp  SearchData.cpp  SearchInterval.cpp  SearchIntervalFactory.cpp  SeparableOptimizationTask.cpp  Task.cpp  TaskFactory.cpp  TreeNode.cpp  Trial.cpp
globalizer/output_system/include/: Exception.h  Messages.h  OutputSystem.h
globalizer/output_system/src/: Exception.cpp  Messages.cpp  OutputSystem.cpp
globalizer/parameters/include/: BaseParameters.h  BaseProperty.h  CombinableBaseParameters.h  ParameterProperty.h  Parameters.h  Property.h  TypedProperty.h  Types.h
globalizer/parameters/src/: Parameters.cpp
globalizer/problem/include/: ConstrainedProblem.hpp  ConstrainedProblemGenerator.hpp  GlobalizerProblem.h  GlobalizerProblemGCGen.h  InitProblem.h  Problem.h  ProblemInterface.h  ProblemManager.h  ProblemPar.hpp  ProblemWithConstraints.h  ProblemWithMulctFunction.h
globalizer/problem/src/: InitProblem.cpp  ProblemManager.cpp
globalizer/src/: GlobProcess.cpp  Globalizer.cpp  HDSolver.cpp  SeparableOptimizationSolver.cpp  Solver.cpp
lib/mpi_stub/include/: mpi.h
lib/mpi_stub/src/: StubMPI.cpp
tests/: CMakeLists.txt  tests.py
tests/src/: CalculationProblem.h  test_calculation.cpp  test_common.h  test_data.cpp  test_dualQueue.cpp  test_evolvent.cpp  test_main.cpp  test_method.cpp  test_parameter_properties.cpp  test_problems.cpp  test_queue.cpp  test_task.cpp
tests/templates/: gtest_config.h.in
